2007-11-11 Chris McGrath <chris@octopod.info>

	* .gitignore,
	  Manifest.txt,
	  rucola_generators/activerecord_model/USAGE,
	  rucola_generators/activerecord_model/activerecord_model_generator.rb,
	  rucola_generators/activerecord_model/templates/model_create_migration.rb.erb,
	  rucola_generators/activerecord_model/templates/model_proxy_template.rb.erb,
	  rucola_generators/activerecord_model/templates/model_template.rb.erb,
	  test/test_activerecord_model_generator.rb:

	- Add basic ActiveRecord model, proxy and migration generator
	- Add .gitignore as I'm using git-svn

2007-11-11 Chris McGrath <chris@octopod.info>

  * lib/rucola/initializer.rb:

	- Fix incorrect require when using ActiveRecord

2007-11-11 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/info_plist.rb,
	  lib/rucola/xcode.rb,
	  test/test_document_model_generator.rb,
	  test/test_xcode.rb:

	- Fixed bugs where destructive methods were called on immutable objects.
	- Added a few more TODOs.

2007-11-9 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  app_generators/rucola/templates/test/controllers/test_application_controller.rb,
	  app_generators/rucola/templates/test/test_helper.rb,
	  config/hoe.rb,
	  lib/rucola/tasks/main.rake,
	  lib/rucola/test_helper.rb,
	  rucola_generators/controller/templates/test_controller_template.rb.erb,
	  rucola_generators/document_model/templates/test_document_model_template.rb.erb,
	  rucola_generators/window_controller/templates/test_window_controller_template.rb.erb:

	- Added useful skeleton tests using test/spec and mocha.
	- Added a few more test helpers which provide a shortcut for getting ivars (ib_outlets).
	- The rake test task will now print with the -rr pretty test/spec output.

2007-11-9 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/autotest/fail.png,
	  lib/autotest/growl_images.rb,
	  lib/autotest/pass.png,
	  lib/autotest/sound.rb:
