@@ -1,0 +1,14 @@
+defaults: &defaults
+  adapter: sqlite3
+
+debug:
+  <<: *defaults
+  database: <%= app_name %>_debug
+
+test:
+  <<: *defaults
+  database: <%= app_name %>_test
+
+release:
+  <<: *defaults
+  database: <%= app_name %>
